fixed svg screen overflow

--- a/src/components/Hero/Hero.scss
+++ b/src/components/Hero/Hero.scss
@@ -35,6 +35,9 @@
 
     .desk-container {
       margin: 0 auto;
+      svg {
+        width: 100%;
+      }
     }
   }
 }
